--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
 }
 
 #map {
@@ -10,17 +11,30 @@ body {
     width: 100%;
 }
 
-.popup {
+.flyToCampusButton {
+    width: 100% !important;
+    padding: 5px !important;
+    font-weight: bold !important;
+}
+
+#selectedPlaceSheet {
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
+    z-index: 10;
+    background-color: white;
+    box-sizing: border-box;
+    padding-left: 1vh;
+    padding-right: 1vh;
+    max-height: 50vh;
+    overflow: scroll;
+}
+
+#buildingPhotoNumberAddress {
     display: flex;
     align-items: center;
 }
 
 .centerText {
     text-align: center;
-}
-
-.flyToCampusButton {
-    width: 100% !important;
-    padding: 5px !important;
-    font-weight: bold !important;
 }
