--- a/styles.css
+++ b/styles.css
@@ -24,14 +24,19 @@ body {
     z-index: 10;
     background-color: white;
     box-sizing: border-box;
-    padding-left: 1vh;
-    padding-right: 1vh;
+    padding: 0 5vw 1vh;
     max-height: 50vh;
     overflow: scroll;
 }
 
 #buildingPhotoNumberAddress {
     display: flex;
+    align-items: center;
+}
+
+.routeBlock {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 
