List upcoming stops for selected vehicle

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
     align-items: center;
 }
 
-.routeBlock {
+.sheetListEntry {
     display: flex;
     justify-content: space-between;
     align-items: center;
