--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
     box-sizing: border-box;
     padding: 0 5vw 1vh;
     max-height: 40vh;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .buildingOrLotSheet {
