--- a/styles.css
+++ b/styles.css
@@ -26,18 +26,19 @@ body {
     box-sizing: border-box;
     padding: 0 5vw 1vh;
     max-height: 40vh;
-    overflow: auto;
-}
-
-.buildingOrLotSheet {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    overflow-y: auto;
     overflow-wrap: break-word;
 }
 
 #buildingPhotoNumberAddress {
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#departments {
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
