--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,12 @@ body {
     width: 100%;
 }
 
+.search-box {
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0 0 0 2px rgba(0, 0, 0, .1);
+}
+
 .flyToCampusButton {
     width: 100% !important;
     padding: 5px !important;
