--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     width: 100%;
 }
 
-.search-box {
+#search-box {
     border: none;
     border-radius: 4px;
     box-shadow: 0 0 0 2px rgba(0, 0, 0, .1);
