--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     box-shadow: 0 0 0 2px rgba(0, 0, 0, .1);
 }
 
-.fly-to-campus-button {
+.custom-map-control-button {
     width: 100% !important;
     padding: 5px !important;
     font-weight: bold !important;
